# semantic_search

./: .gitignore  LICENSE.txt  README.md  SPEC.md  pyproject.toml
.github/workflows/: ci.yml
examples/: README.md  bigquery_example_v2.py  dump_weaviate_data.py  get_collections.py  semantic_search_query_v2.py
semantic_search/: __init__.py
semantic_search/src/: __init__.py  bigquery_metadata_scanner.py  schema_scanner.py  schema_transformer.py  semantic_search.py  utils.py  weaviate_loader.py
tests/: test_bigquery_metadata_scanner.py  test_lazy_imports.py  test_schema_scanner.py  test_schema_transformer.py  test_semantic_search.py  test_utils.py  test_weaviate_loader.py
